Change all terminology to 'internal note', fix some layout issues.

--- a/app.css
+++ b/app.css
@@ -1,3 +1,4 @@
 .private-comment {
+  margin-bottom: 12px;
   width: 97%;
 }
